[package]
name = "lufa"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["cookies", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_php = "0.5.0"
snafu = "0.8.2"
urlencoding = "2.1.3"
tokio = { version = "1.37.0", features = ["full"] }
lufa-models = { version = "0.1.0", path = "../models" }
serde_json = "1.0.117"
env_logger = "0.11.3"
url = "2.5.0"

